# property-value-estimator

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 420ad0b696c9_add_raw_data_tables.py
assets/queries/features/: property_value_estimator.sql
docker/: Dockerfile.api  Dockerfile.component  Dockerfile.model  entrypoint.sh
docker/api/: Dockerfile.api
docker/model/: Dockerfile.model  entrypoint.sh
scripts/: analyze_data_quality.py  migrate_data.py
src/property_value_estimator/: __init__.py
src/property_value_estimator/core/: config.py  settings.py
src/property_value_estimator/entrypoints/: __init__.py  api.py
src/property_value_estimator/entrypoints/kfp/: __init__.py  cli.py
src/property_value_estimator/entrypoints/serving/: __init__.py  cli.py
src/property_value_estimator/infrastructure/db/: base.py
src/property_value_estimator/infrastructure/models/: __init__.py  model_client.py
src/property_value_estimator/model/: pipeline.py
src/property_value_estimator/model/components/: __init__.py  data_loader_component.py  evaluation_component.py  feature_processor_component.py  serving_component.py  split_component.py  training_component.py
src/property_value_estimator/model/model/: evaluation.py  split.py  training.py
src/property_value_estimator/model/preprocessing/: __init__.py  data_loader.py  feature_processor.py
src/property_value_estimator/model/serving/: mlflow.py
tests/e2e/: test_model_predictions.py
(+6 files in other folders)
