[project]
name = "property_value_estimator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FarDust", email = "gabriel.faundez@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.25.0",
    "kfp>=2.14.3",
    "mlflow>=3.3.2",
    "pandas==2.1.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "scikit-learn==1.3.1",
    "sqlalchemy>=2.0.43",
    "alembic>=1.16.5",
    "typer>=0.17.4",
    "plotly>=6.3.0",
    "cloudpickle>=3.1.1",
    "uvicorn>=0.24.0",
    "psycopg2-binary>=2.9.10",
]

[project.scripts]
property-value-estimator-pipeline = "property_value_estimator.entrypoints.kfp.cli:app"
property-value-estimator-api = "property_value_estimator.entrypoints.api:main"
property-value-estimator-model = "property_value_estimator.entrypoints.serving.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
